# py-todo

./: .env.sample  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
apps/: __init__.py
apps/auth/: apis.py  controllers.py  dependencies.py  models.py  schemas.py
apps/extra/: apis.py  models.py
apps/todo/: apis.py  controllers.py  crud.py  enums.py  models.py  schemas.py
common/: cryptography.py  jwt.py  models.py  responses.py
core/: events.py  main.py  router.py  settings.py
middlewares/: response_handler.py
migrations/models/: 0_20240720203443_init.py  3_20240712161459_None.py  4_20240713224347_update.py
services/database/: connection.py
