[tool.poetry]
name = "py-todo"
version = "0.1.0"
description = "To Do backend service using Python/FastAPI"
authors = ["Mohsen <mim.khodabakhshi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
